Sync filename refs & add placeholder page for test builds

--- a/versions/latest/modules/zh/nav.adoc
+++ b/versions/latest/modules/zh/nav.adoc
@@ -1,1 +1,162 @@
+* xref:release-notes.adoc[]
 * xref:rancher-manager.adoc[]
+** xref:getting-started/quick-start-guides/deploy-rancher-manager/prime.adoc[]
+** xref:getting-started/overview.adoc[]
+** xref:reference-guides/rancher-manager-architecture/rancher-manager-architecture.adoc[]
+** xref:reference-guides/kubernetes-concepts.adoc[]
+** xref:glossary.adoc[]
+* Prime Installation and Upgrades
+** xref:getting-started/installation-and-upgrade/installation-requirements/installation-requirements.adoc[]
+** xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/install-upgrade-on-a-kubernetes-cluster.adoc[]
+** xref:reference-guides/cluster-configuration/rancher-server-configuration/rancher-server-configuration.adoc[]
+** xref:getting-started/installation-and-upgrade/installation-references/installation-references.adoc[]
+** xref:getting-started/installation-and-upgrade/other-installation-methods/other-installation-methods.adoc[]
+** xref:getting-started/installation-and-upgrade/resources/resources.adoc[]
+** xref:how-to-guides/advanced-user-guides/tune-etcd-for-large-installs.adoc[]
+** xref:getting-started/installation-and-upgrade/upgrade-and-roll-back-kubernetes.adoc[]
+** xref:getting-started/installation-and-upgrade/upgrade-kubernetes-without-upgrading-rancher.adoc[]
+** xref:integrations-in-rancher/cloud-marketplace/cloud-marketplace.adoc[]
+* Rancher Administration
+** xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/authentication-permissions-and-global-configuration.adoc[]
+** xref:how-to-guides/new-user-guides/kubernetes-cluster-setup/kubernetes-cluster-setup.adoc[]
+** xref:reference-guides/cluster-configuration/rancher-server-configuration/rancher-server-configuration.adoc[]
+** xref:how-to-guides/new-user-guides/add-users-to-projects.adoc[]
+** xref:reference-guides/user-settings/user-settings.adoc[]
+** xref:how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/backup-restore-and-disaster-recovery.adoc[]
+** xref:reference-guides/backup-restore-configuration/backup-restore-configuration.adoc[]
+*** xref:reference-guides/backup-restore-configuration/backup-configuration.adoc[]
+*** xref:reference-guides/backup-restore-configuration/restore-configuration.adoc[]
+*** xref:reference-guides/backup-restore-configuration/storage-configuration.adoc[]
+*** xref:reference-guides/backup-restore-configuration/examples.adoc[]
+** xref:how-to-guides/advanced-user-guides/enable-experimental-features/enable-experimental-features.adoc[]
+** xref:reference-guides/best-practices/rancher-server/rancher-server.adoc[]
+* Cluster Administration
+** xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/kubernetes-clusters-in-rancher-setup.adoc[]
+** xref:how-to-guides/new-user-guides/manage-clusters/manage-clusters.adoc[]
+** xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/about-rancher-agents.adoc[]
+** xref:how-to-guides/new-user-guides/infrastructure-setup/infrastructure-setup.adoc[]
+** xref:reference-guides/cluster-configuration/downstream-cluster-configuration/downstream-cluster-configuration.adoc[]
+** xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/launch-kubernetes-with-rancher.adoc[]
+** xref:how-to-guides/new-user-guides/kubernetes-resources-setup/kubernetes-resources-setup.adoc[]
+** xref:how-to-guides/new-user-guides/manage-namespaces.adoc[]
+** xref:how-to-guides/advanced-user-guides/manage-projects/manage-projects.adoc[]
+** xref:how-to-guides/new-user-guides/helm-charts-in-rancher/helm-charts-in-rancher.adoc[]
+** xref:reference-guides/best-practices/rancher-managed-clusters/rancher-managed-clusters.adoc[]
+** Downstream Hosted Cluster Setup
+*** xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/set-up-cloud-providers.adoc[]
+*** xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/kubernetes-clusters-in-rancher-setup.adoc[]
+*** Azure Kubernetes Service (AKS)
+**** xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/aks.adoc[]
+**** xref:reference-guides/cluster-configuration/rancher-server-configuration/aks-cluster-configuration.adoc[]
+**** xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/azure.adoc[]
+**** xref:reference-guides/cluster-configuration/downstream-cluster-configuration/node-template-configuration/azure.adoc[]
+*** Amazon Elastic Kubernetes Service (EKS)
+**** xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/amazon.adoc[]
+**** xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/migrate-to-an-out-of-tree-cloud-provider/migrate-to-out-of-tree-amazon.adoc[]
+**** xref:reference-guides/cluster-configuration/rancher-server-configuration/eks-cluster-configuration.adoc[]
+*** Amazon Elastic Compute Cloud (EC2)
+**** xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/amazon.adoc[]
+**** xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/amazon-ec2.adoc[]
+**** xref:reference-guides/cluster-configuration/downstream-cluster-configuration/node-template-configuration/amazon-ec2.adoc[]
+**** xref:how-to-guides/new-user-guides/manage-clusters/install-cluster-autoscaler/use-aws-ec2-auto-scaling-groups.adoc[]
+*** Google Kubernetes Engine (GKE)
+**** xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/gke.adoc[]
+**** xref:reference-guides/cluster-configuration/rancher-server-configuration/gke-cluster-configuration/gke-cluster-configuration.adoc[]
+*** Google Cloud Service (GCS)
+**** xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/google-compute-engine.adoc[]
+*** VMWare vSphere
+**** xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/configure-in-tree-vsphere.adoc[]
+**** Install on VMWare vSphere
+***** xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/configure-in-tree-vsphere.adoc[]
+***** xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc[]
+**** xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/migrate-to-an-out-of-tree-cloud-provider/migrate-to-out-of-tree-vsphere.adoc[]
+**** xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/vsphere/vsphere.adoc[]
+**** xref:reference-guides/cluster-configuration/downstream-cluster-configuration/node-template-configuration/vsphere.adoc[]
+* xref:reference-guides/rancher-security/rancher-security.adoc[]
+** xref:reference-guides/rancher-security/security-advisories-and-cves.adoc[]
+** xref:reference-guides/rancher-security/kubernetes-security-best-practices.adoc[]
+** xref:reference-guides/rancher-security/rancher-security-best-practices.adoc[]
+** xref:integrations-in-rancher/neuvector/neuvector.adoc[]
+** xref:reference-guides/rancher-webhook.adoc[]
+** Hardening Guides
+*** xref:reference-guides/rancher-security/hardening-guides/hardening-guides.adoc[]
+*** xref:reference-guides/rancher-security/rancher-webhook-hardening.adoc[]
+** CIS Scans (Security Scans)
+*** xref:integrations-in-rancher/cis-scans/cis-scans.adoc[]
+*** xref:integrations-in-rancher/cis-scans/rbac-for-cis-scans.adoc[]
+*** xref:how-to-guides/advanced-user-guides/cis-scan-guides/install-rancher-cis-benchmark.adoc[]
+*** xref:how-to-guides/advanced-user-guides/cis-scan-guides/uninstall-rancher-cis-benchmark.adoc[]
+*** xref:integrations-in-rancher/cis-scans/configuration-reference.adoc[]
+*** xref:how-to-guides/advanced-user-guides/cis-scan-guides/run-a-scan.adoc[]
+*** xref:how-to-guides/advanced-user-guides/cis-scan-guides/run-a-scan-periodically-on-a-schedule.adoc[]
+*** xref:how-to-guides/advanced-user-guides/cis-scan-guides/skip-tests.adoc[]
+*** xref:how-to-guides/advanced-user-guides/cis-scan-guides/view-reports.adoc[]
+*** xref:how-to-guides/advanced-user-guides/cis-scan-guides/enable-alerting-for-rancher-cis-benchmark.adoc[]
+*** xref:how-to-guides/advanced-user-guides/cis-scan-guides/configure-alerts-for-periodic-scan-on-a-schedule.adoc[]
+*** xref:how-to-guides/advanced-user-guides/cis-scan-guides/configure-alerts-for-periodic-scan-on-a-schedule.adoc[]
+** Pod Security
+*** xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/pod-security-standards.adoc[]
+*** xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/psa-config-templates.adoc[]
+*** xref:reference-guides/rancher-security/psa-restricted-exemptions.adoc[]
+** Secrets & Encryption
+*** xref:how-to-guides/new-user-guides/kubernetes-resources-setup/secrets.adoc[]
+*** xref:getting-started/installation-and-upgrade/resources/add-tls-secrets.adoc[]
+*** xref:how-to-guides/new-user-guides/kubernetes-resources-setup/encrypt-http-communication.adoc[]
+*** xref:how-to-guides/new-user-guides/manage-clusters/rotate-encryption-key.adoc[]
+* xref:integrations-in-rancher/integrations-in-rancher.adoc[]
+** xref:integrations-in-rancher/kubernetes-distributions/kubernetes-distributions.adoc[]
+** xref:integrations-in-rancher/rancher-extensions.adoc[]
+** xref:integrations-in-rancher/harvester/harvester.adoc[]
+** xref:integrations-in-rancher/longhorn/longhorn.adoc[]
+** xref:integrations-in-rancher/cis-scans/cis-scans.adoc[]
+** xref:integrations-in-rancher/neuvector/neuvector.adoc[]
+** xref:integrations-in-rancher/kubewarden/kubewarden.adoc[]
+** xref:integrations-in-rancher/elemental/elemental.adoc[]
+** xref:integrations-in-rancher/fleet/fleet.adoc[]
+* Observability
+** xref:reference-guides/rancher-cluster-tools.adoc[]
+** xref:reference-guides/rancher-project-tools.adoc[]
+** Logging
+*** xref:reference-guides/best-practices/rancher-managed-clusters/logging-best-practices.adoc[]
+*** xref:integrations-in-rancher/logging/logging.adoc[]
+*** xref:how-to-guides/advanced-user-guides/enable-api-audit-log.adoc[]
+*** xref:how-to-guides/advanced-user-guides/enable-api-audit-log-in-downstream-clusters.adoc[]
+** Monitoring & Dashboards
+*** xref:reference-guides/best-practices/rancher-managed-clusters/monitoring-best-practices.adoc[]
+*** xref:integrations-in-rancher/monitoring-and-alerting/monitoring-and-alerting.adoc[]
+*** xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/enable-monitoring.adoc[]
+*** xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/uninstall-monitoring.adoc[]
+*** xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/set-up-monitoring-for-workloads.adoc[]
+*** xref:reference-guides/monitoring-v2-configuration/monitoring-v2-configuration.adoc[]
+**** xref:how-to-guides/advanced-user-guides/monitoring-v2-configuration-guides/monitoring-v2-configuration-guides.adoc[]
+**** xref:reference-guides/prometheus-federator/prometheus-federator.adoc[]
+**** xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/prometheus-federator-guides/prometheus-federator-guides.adoc[]
+**** xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/debug-high-memory-usage.adoc[]
+**** xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/prometheus-federator-guides/enable-prometheus-federator.adoc[]
+**** xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/prometheus-federator-guides/uninstall-prometheus-federator.adoc[]
+**** xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/prometheus-federator-guides/customize-grafana-dashboards.adoc[]
+**** xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/prometheus-federator-guides/set-up-workloads.adoc[]
+*** Customizing the Dashboard
+**** xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/customize-grafana-dashboard.adoc[]
+**** xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/create-persistent-grafana-dashboard.adoc[]
+** xref:how-to-guides/advanced-user-guides/istio-setup-guide/istio-setup-guide.adoc[]
+*** xref:reference-guides/rancher-cluster-tools.adoc[]
+*** xref:reference-guides/rancher-project-tools.adoc[]
+** Observability Integrations
+*** xref:integrations-in-rancher/logging/logging.adoc[]
+*** xref:integrations-in-rancher/monitoring-and-alerting/monitoring-and-alerting.adoc[]
+* API
+** xref:api/quickstart.adoc[]
+** xref:api/workflows/projects.adoc[]
+** xref:api/api-reference.adoc[Api Reference]
+* xref:troubleshooting/general-troubleshooting.adoc[]
+** xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/troubleshooting.adoc[]
+** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[]
+** xref:troubleshooting/kubernetes-components/kubernetes-components.adoc[]
+** xref:troubleshooting/other-troubleshooting-tips/rancher-ha.adoc[]
+** xref:troubleshooting/other-troubleshooting-tips/registered-clusters.adoc[]
+** xref:troubleshooting/other-troubleshooting-tips/networking.adoc[]
+** xref:how-to-guides/advanced-user-guides/open-ports-with-firewalld.adoc[]
+** xref:troubleshooting/other-troubleshooting-tips/kubernetes-resources.adoc[]
+** xref:troubleshooting/other-troubleshooting-tips/dns.adoc[]
+* xref:contribute-to-rancher.adoc[]
